--- a/style.css
+++ b/style.css
@@ -1,12 +1,27 @@
 @import url('https://fonts.googleapis.com/css?family=Diplomata');
-    
-header {background-color:#90ee90;
-    height: 60px;
-border: 2px solid #696969;
-    
+@import url('https://fonts.googleapis.com/css?family=Oregano');
+body {
+    background-color: #DCDCDC;
 }
 
-h1, h2 {font-family:'Diplomata', cursive;
-    text-align: center; color: #696969;
-    padding-bottom: 15px;
+header {
+    background-color: #90ee90;
+    height: 100px;
+    border: 2px solid #696969;
+    padding-bottom: 20px;
 }
+
+h1,
+h2 {
+    font-family: 'Diplomata', cursive;
+    text-align: center;
+    color: #696969;
+}
+
+
+div {
+    width: 600px;
+    margin: auto;
+}
+h3, .paragraph {font-family: 'Oregano', cursive;
+    text-align: left;}
