--- a/style.css
+++ b/style.css
@@ -36,4 +36,6 @@ hr {height: 4px;
   border: 2px #696969;
     width:750px;
 }
-footer {background-color: #90ee90;}
+footer {height: 100px;
+    background-color: #90ee90;
+border: 2px solid #696969;}
